css/styles.css
a, a:hover, a:focus, a:active {
    text-decoration: none;
    color: inherit;
    font-family: Arial, Helvetica, sans-serif;
}




.Links{
display: flex;
align-items: center;
gap: 16px;
color: white;
height: 60px;
}


.LinksWrap{
    display: inline-block;
    position: absolute;
    right: 16px;
}
.header {
    background-color: #1F2937;
}



.Logo{
display: inline-block;
justify-content: left;
background-color: #1F2937;
gap: 16px;
}

.ThisWebsiteIsAwesome{

    background-color: #1F2937;
    color: #f5f5f5;
    display: flex;
    flex-direction: row wrap;
    align-content: center;
    justify-content: center;
    padding: 50px;
    border: 2px;
    
}

.image{



}


.Text{

    flex-flow: column-wrap;
    align-content: center;
    justify-content: flex-start;


}

.SomeRandomInformation{

    display: flex;
    color: #1F2937;
    padding: 20px;
    justify-content: center;
    background-color: #f5f5f5;
}

.FourAlignedPics{
    display: flex;
    text-align: justify;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    color: #1F2937;
    background-color: #f5f5f5;
    gap: 50px;
}

.InspiringQuote{
    background-color: #E5E7EB


}

.CallToAction{



}

.Copyright{



}


.HeroFace{
    display: flex;
    flex-flow: column;
}

